--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Git</title>
-    <style src="./main.css"></style>
+    <link rel="stylesheet" href="./main.css">
 </head>
 <body>
     <h1>study git</h1>
+    <img src="./img.png" alt="">
 </body>
 </html>  
